# TrendsAssignment1

./: Argument.cpp  Argument.h  CMakeLists.txt  Formula.cpp  Formula.h  Rule.cpp  Rule.h  argumentBuilder.cpp  argumentBuilder.h  argumentSolver.cpp  argumentSolver.h  input.txt  inputFormat.txt  main.cpp
